Chinese Readability Improvements AND Minor fixes

--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -89,7 +89,7 @@
 @media only screen and (max-width 992px)
   .menu
     max-height 40%
-    overflow-y scroll
+    overflow-y auto
     background #FFFFFF
     display none 
     opacity: 0 
